2008-07-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/haskell.c:
   Fix infinite loop when parsing datatypes (fixes #2011356).
 * src/editor.c:
   Make line breaking work with multi-line comment completion and
   'Newline strips trailing spaces' pref.
 * doc/plugin-symbols.c, doc/Makefile.am, doc/plugins.dox:
   Rename plugin-symbols.c pluginsymbols.c.


2008-07-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/plugins.dox, src/editor.c, src/geanyobject.c, src/geanyobject.h,
   src/plugindata.h:
   Rename signal "populate-edit-menu" into "update-editor-menu".
 * scintilla/LexHTML.cxx:
   Revert the change of rev2072: Fix syntax colouring bug when using
   '?>' in a PHP comment (closes #1838854 and #1848518).


2008-07-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Group focus keybinding callbacks together.


2008-07-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/editor.c:
   Fix memory leak in utils_find_open_xml_tag() when size < 3, and only
   allocate string when '<' found.
   Factor insert_closing_tag() from handle_xml(), fixing a memory leak
   when ignoring tags like <br>.
 * src/keybindings.c:
   Avoid flickering the menu bar when 'Override Geany keybindings'
   Terminal pref is set.
 * src/editor.c:
   Fix possible segfault for XML tag completion when no '<' brace could
   be found.
 * src/document.c:
   Ensure all opened documents are colourised before being drawn
   (should happen anyway in document_set_filetype(), but just in case).
 * src/keybindings.c, src/keybindings.h:
   Add 'Switch to Compiler' keybinding (useful when checking build
   progress).


2008-07-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/utils.c:
   Fix unnecessary 40 character limit for auto-closing XML tags
   (closes #2007278).
 * src/keyfile.c:
   Fix broken session file support with more than 99 files
   (closes #2007288).